probably fixed overflow

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <h1 class="trend">The biggest trend</h1>
 
-    <div class="products overflow-gone">
+    <div class="products trend overflow-gone">
         
 
         <div class="product width-change">
